--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hpw-seed-frontend",
+  "name": "solopreneur-crm",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -10,19 +10,30 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "dependencies": {
-    "svelte": "^4.2.7",
-    "svelte-routing": "^2.0.0",
-    "tailwindcss": "^3.3.5",
-    "postcss": "^8.4.31",
     "autoprefixer": "^10.4.16",
     "chart.js": "^4.4.0",
-    "svelte-chartjs": "^3.1.2"
+    "date-fns": "^2.30.0",
+    "dexie": "^3.2.4",
+    "filesize": "^10.1.0",
+    "lucide-svelte": "^0.294.0",
+    "marked": "^9.1.5",
+    "postcss": "^8.4.31",
+    "svelte": "^4.2.7",
+    "svelte-calendar": "^3.1.6",
+    "svelte-chartjs": "^3.1.2",
+    "svelte-dnd-action": "^0.9.23",
+    "svelte-routing": "^2.0.0",
+    "tailwindcss": "^3.3.5",
+    "tippy.js": "^6.3.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/uuid": "^9.0.7",
     "svelte-check": "^3.6.0",
+    "svelte-preprocess": "^6.0.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
-} 
+}
